fix: 테스트가 통과되지 않는 부분 처리